Working on top score saves

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -63,20 +63,20 @@
                 <p></p>
         </article>
 
-        <div class="conclude-game-containe" id="concludegame">
+        <div class="conclude-game-container" id="concludegame">
             <H4>Game over!</H4>
-            Thank you for playing. Your product is moving forward to production. Your scores are:
+            Thank you for playing. Your product is now moving forward to production. <span id="scorereport">123</span>
             <form method="post">
                 <fieldset>
                   <label>
                     Title
-                    <input name="title" placeholder="Write the name of this post..."/>
+                    <input name="username" placeholder="Write your username.."/>
                   </label>
                 </fieldset>
 
                 <label>
                 Content
-                <textarea name="content" placeholder="Write what's on your mind..." ></textarea>
+                <input name="score" type="number" />
                 </label>
 
 
