--- a/views/pages/new.ejs
+++ b/views/pages/new.ejs
@@ -24,13 +24,13 @@
                 <fieldset>
                   <label>
                     Title
-                    <input name="title" placeholder="Write the name of this post..."/>
+                    <input name="username" placeholder="Write the username to save..."/>
                   </label>
                 </fieldset>
 
                 <label>
                 Content
-                <textarea name="content" placeholder="Write what's on your mind..." ></textarea>
+                <input name="score" type="number"/>
                 </label>
               
                 <input
