--- a/views/pages/topscores.ejs
+++ b/views/pages/topscores.ejs
@@ -26,8 +26,8 @@
 
         <!-- Welcome information -->
         <div class="topline-container">
-            <h1>Product Design Games Top Scores</h1>
-            <p>See all the top scores below </p>
+            <h1>🏆Top Scores🏆</h1>
+            <p>See all the top scores so far</p>
 
         </div>
         <table>
