--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -19,10 +19,21 @@
         </div>
 
         <div class="about-container">
-            <p> This web app is meant to give everyone a fun way to test your knowledge of how well you learnt the principles taught in product design class. If you have just gone through the programme, it may help you revise. And if you have not yet gone through ProductUp, it may help you decide whether you need to come.</p>
+            <p> This web app is meant to give you a fun way to test your knowledge of how well you learnt the principles taught in product design class. If you have just gone through the programme, it may help you revise and refresh some key concepts.</p>
             <br>
-        </div>
+            
 
+            
+        </div>
+        <div class="about-container">
+            <p> At a more meta level, I do not see this as a web app that solves a problem on its own. This is probably best deployed as a teaching aid accompanying a product design curriculum, and can be used in many different ways with tweaks. For example: </p>
+            <p> 1. As a "Kobayashi Maru" type simulator of how badly things can go when product design processes are not followed. For example, by imposing a tighter time constraint that forces you to skip steps. </p>
+            <p> 2. As a safe sandbox simulator, to let class participants experiment by deliberately choosing to skip certain steps. This is modeled in game already - try going straight to prototype on day 1 or 2, or not talking to the policy owner until day 5.</p>
+            <p> 3. In its current form, as a pre- and post-class assessment / refresher.</p>
+            <p> 4. To elicit discussion about how the participants feel that the simulator actually does not model real life circumstances well.</p>
+
+            
+        </div>
     </main>
 </body>
 </html>
