--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -3,8 +3,9 @@
       <li><strong>Product Design Game v0.1</strong></li>
     </ul>
     <ul>
+      <li><a href="/">New Game</a></li>
       <li><a href="/about">ℹ About</a></li>
-      <li><a href="/topscores">Top Scores</a></li>
+      <li><a href="/topscores">Leaderboard</a></li>
       <li><a href="https://techup.live" target="_blank">🔗 TechUp Live</a></li>
     </ul>
 </nav>
