--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -39,12 +39,14 @@
         These indicators track how well you are doing and contribute to your final score. 
         <Table>
             <Tr>
+                <TD class="hidden-score-saver" width="20%"><span class="emoji"></span>Hidden Readiness display</TD>
                 <TD class="statusdisplay" width="20%"><span class="emoji">🔎</span>Problem Statement Clarity</TD>
                 <TD class="statusdisplay" width="20%"><span class="emoji">💭</span>Customer Insight </TD>
                 <TD class="statusdisplay" width="20%"><span class="emoji">💖</span>Team Morale</TD>
                 <TD class="statusdisplay" width="20%"><span class="emoji">💪</span>Business Owner Confidence</TD>
             </Tr>
             <Tr>
+                <TD class="hidden-score-saver"><span id="product-readiness">-</span> </TD>
                 <TD class="statusdisplay"><span id="problem-statement-clarity">-</span> </TD>
                 <TD class="statusdisplay"><span id="customer-insight">-</span> </TD>
                 <TD class="statusdisplay"><span id="team-morale">-</span></TD>
