--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -6,6 +6,17 @@
     <title>About Product Design Game</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"/>
     <link rel="stylesheet" href="/css/style.css" >
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M0NXM8FB79"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-M0NXM8FB79');
+    </script>
+
 </head>
 <body>
     <main class="container">
