--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -343,10 +343,12 @@
         </article>
 
         
-        <!-- <div class="new-post-btn-container">
-           <a href="/new" class="button" role="button">+ New Post</a>
-        </div> -->
-
+        <div class="about-container">
+            <h4>Disclaimer</h4>
+            <p> This website is created for learning purposes only. The information provided here should not be considered professional advice. Please note that we make no guarantees regarding the accuracy, completeness, or reliability of the contents of this website. Any actions you take based on the contents of this website are at your own risk. We are not liable for any losses or damages incurred from the use of this website. </p>
+            
+            
+        </div>
 
     </main>
 </body>
