--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -28,7 +28,7 @@
         <!-- Welcome information -->
         <div class="topline-container">
             <h1>Welcome to Product Design Game</h1>
-            <p>Your mission, should you choose to accept it, is to navigate a product design journey. Acting as a the product manager placed in charge of a new web app, your goal is to get the web app to the best possible start in its first 20 working days. At the end of that time, your product will automatically move into MVP development and your score will be computed. </p>
+            <p>Your mission, should you choose to accept it, is to navigate a product design journey. Acting as the product manager placed in charge of a new web app, your goal is to get the web app to the best possible start in its first 20 working days. At the end of that time, your product will automatically move into MVP development and your score will be computed. </p>
             <!-- TODO: Start by telling us your name -->
             <a onClick="resetVariables()" class="button" role="button" id="startButton">Start</a>
         </div>
